--- a/website01/css/style.css
+++ b/website01/css/style.css
@@ -1,22 +1,44 @@
 body {
-      text-align: center;
-      background: url("https://images.pexels.com/photos/395676/pexels-photo-395676.jpeg?w=940&h=650&auto=compress&cs=tinysrgb");
-      background-size: cover;
-      background-position: center;
-      color: #3c3c3c;
-      font-family: helvetica;
-      padding: 50px 0px 0px 0px;
-    }
-    p {
-      font-size: 20px;
-    }
-    input {
-      border: 0.5;
-      padding: 10px;
-      font-size: 14px;
-    }
-    input[type="submit"] {
-      border: 1px solid #1e90ff;
-      background: #1e90ff;
-      color: white;
-    }
+  text-align: left;
+  background: url("https://images.pexels.com/photos/1526/dark-blur-blurred-gradient.jpg?w=1260&h=750&auto=compress&cs=tinysrgb");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
+  color: #f4f4f4;
+  font-family: helvetica;
+  padding: 50px 0px 0px 0px;
+}
+
+.contents {
+  text-align: center;
+}
+
+p {
+  font-size: 20px;
+}
+
+#form_btn {
+  position: relative;
+  display: inline-block;
+}
+
+input {
+  border: 0.5;
+  padding: 10px;
+  font-size: 12px;
+  width: 200px;
+  padding-right: 20px;
+}
+
+input[type="submit"] {
+  border: 1px solid #1e90ff;
+  background: #1e90ff;
+  color: white;
+}
+
+button {
+  display: inline-block;
+  height: 38px;
+  right: 10%;
+  width: 100px;
+}
